# c_project_template

./: .editorconfig  .gitattributes  meson.build  meson_options.txt  readme.md  security.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_build_linux_host.yml  ci_build_macos_host.yml  ci_build_win10_host.yml  ci_distro_build.yml
modules/: meson.build
modules/code/: meson.build
modules/main/: main.c  meson.build  project.c
modules/test/: meson.build  test_cases.c  test_runner.c
subprojects/: unity.wrap
